# bet_explorer_project

./: pyproject.toml
src/bet_explorer_project/: all_matchups_for_round_betextp.json  all_matchups_for_round_fbref.json  analisy_matchups.py  my_excel.xlsx  scrapper.py  urls.json  urls.txt
src/bet_explorer_project/ligas/: england_premier-league.xlsx  france_ligue-1.xlsx  germany_bundesliga.xlsx  italy_serie-a.xlsx  spain_laliga.xlsx
src/bet_explorer_project/ligas_only_betexplorer/: argentina_torneo-betano.xlsx
